pihole/2-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pihole-deployment
  namespace: pihole
  labels:
    app: pihole
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pihole
  template:
    metadata:
      labels:
        app: pihole
    spec:
      containers:
        - name: pihole
          image: pihole/pihole:v5.8.1
          securityContext:
            privileged: true
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - containerPort: 53
              name: dns-tcp
              protocol: TCP
            - containerPort: 53
              name: dns-udp
              protocol: UDP
            - containerPort: 80
              name: http
              protocol: TCP
            - containerPort: 443
              name: https
              protocol: TCP
            - containerPort: 67
              name: dhcp
              protocol: UDP
            - containerPort: 67
          volumeMounts:
            - name: pihole-etc
              mountPath: /etc/pihole
            - name: pihole-dnsmasq
              mountPath: /etc/dnsmasq.d
            - name: pihole-lists
              mountPath: /etc/pihole/custom.list
              subPath: custom.list
      volumes:
        - name: pihole-etc
          persistentVolumeClaim:
            claimName: pihole-etc-pvc
        - name: pihole-dnsmasq
          persistentVolumeClaim:
            claimName: pihole-dnsmasq-pvc
        - name: pihole-lists
          configMap:
            name: pihole-lists
