pihole/3-networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: pihole-svc-web
  namespace: pihole
  labels:
    app: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
    metallb.universe.tf/address-pool: pihole
spec:
  type: ClusterIP
  selector:
    app: pihole
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
    - name: https
      port: 443
      targetPort: https
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-svc-dns-tcp
  namespace: pihole
  labels:
    app: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
    metallb.universe.tf/address-pool: pihole
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
    - name: dns-tcp
      port: 53
      targetPort: dns-tcp
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-svc-dns-udp
  namespace: pihole
  labels:
    app: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
    metallb.universe.tf/address-pool: pihole
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
    - name: dns-udp
      port: 53
      targetPort: dns-udp
      protocol: UDP
---
apiVersion: v1
kind: Service
metadata:
  name: pihole-svc-dhcp
  namespace: pihole
  labels:
    app: pihole
  annotations:
    metallb.universe.tf/allow-shared-ip: pihole-svc
    metallb.universe.tf/address-pool: pihole
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app: pihole
  ports:
    - name: dhcp
      port: 67
      targetPort: dhcp
      protocol: UDP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pihole-ingress-subdomain
  namespace: pihole
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /admin/$1
spec:
  rules:
    - host: pihole.deep-thought.local
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: pihole-svc-web
                port:
                  name: http
